[package]
name = "spotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
hex = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
axum = "0.6.4"
rsadsb_common = { version = "0.6.2", features = ["serde"] }
adsb_deku = { version = "0.6.3", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
